// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RandomList random display 2 out of 4 items 1`] = `
<default-list-stub
  items="[object Object],[object Object]"
/>
`;

exports[`RandomList random display 3 out of 4 items 1`] = `
<default-list-stub
  items="[object Object],[object Object],[object Object]"
/>
`;
